13097
{code}
scala> class Foo extends Nothing { val x = 4 }
<console>:4: error: illegal inheritance; superclass Any
 is not a subclass of the superclass Object
 of the mixin trait ScalaObject
       class Foo extends Nothing { val x = 4 }
             ^
<console>:4: error: Any does not have a constructor
       class Foo extends Nothing { val x = 4 }
{code}
